Готов бэк для чата
