# docs/swagger.json
@@ -135,6 +135,134 @@
                 }
             }
         },
+        "/api/chats/find_chats_users": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "find users for chat",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "find"
+                ],
+                "summary": "Find Users for chat",
+                "operationId": "find-user-by-time",
+                "parameters": [
+                    {
+                        "description": "list info",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/chat.FindUserInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/chats/find_chats_users_by_hobby": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "find users by hobby for chat",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "find"
+                ],
+                "summary": "Find Users by hobby for chat",
+                "operationId": "find-user-by-hobby",
+                "parameters": [
+                    {
+                        "description": "list info",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/chat.FindUserInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/chats/get_all_chats": {
             "get": {
                 "security": [
@@ -929,7 +1057,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/chat.UserHobby"
+                            "$ref": "#/definitions/chat.UserHobbyInput"
                         }
                     }
                 ],
@@ -1114,12 +1242,78 @@
                 "operationId": "forgot-password",
                 "parameters": [
                     {
-                        "description": "credentials",
+                        "description": "email",
                         "name": "input",
                         "in": "body",
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/chat.ForgotPasswordInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/reset-password/{token}": {
+            "put": {
+                "description": "reset password",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Reset Password",
+                "operationId": "reset-password",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Token",
+                        "name": "token",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "passwords",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/chat.ResetPasswordInput"
                         }
                     }
                 ],
@@ -1237,7 +1431,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/chat.User"
+                            "$ref": "#/definitions/chat.UserInput"
                         }
                     }
                 ],
@@ -1308,6 +1502,23 @@
                 }
             }
         },
+        "chat.FindUserInput": {
+            "type": "object",
+            "properties": {
+                "endday": {
+                    "type": "string"
+                },
+                "endtime": {
+                    "type": "string"
+                },
+                "startday": {
+                    "type": "string"
+                },
+                "starttime": {
+                    "type": "string"
+                }
+            }
+        },
         "chat.ForgotPasswordInput": {
             "type": "object",
             "required": [
@@ -1322,17 +1533,23 @@
         "chat.Profile": {
             "type": "object",
             "required": [
-                "city",
                 "name",
+                "photo",
                 "surname",
                 "telegram"
             ],
             "properties": {
+                "birthday": {
+                    "type": "string"
+                },
                 "city": {
                     "type": "string"
                 },
-                "findstatus": {
-                    "type": "boolean"
+                "country": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
                 },
                 "name": {
                     "type": "string"
@@ -1344,6 +1561,21 @@
                     "type": "string"
                 },
                 "telegram": {
+                    "type": "string"
+                }
+            }
+        },
+        "chat.ResetPasswordInput": {
+            "type": "object",
+            "required": [
+                "password",
+                "password-repeat"
+            ],
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "password-repeat": {
                     "type": "string"
                 }
             }
@@ -1354,9 +1586,6 @@
                 "description": {
                     "type": "string"
                 },
-                "done": {
-                    "type": "boolean"
-                },
                 "title": {
                     "type": "string"
                 }
@@ -1365,9 +1594,6 @@
         "chat.UpdateListInput": {
             "type": "object",
             "properties": {
-                "description": {
-                    "type": "string"
-                },
                 "title": {
                     "type": "string"
                 }
@@ -1376,7 +1602,13 @@
         "chat.UpdateProfile": {
             "type": "object",
             "properties": {
+                "birthday": {
+                    "type": "string"
+                },
                 "city": {
+                    "type": "string"
+                },
+                "country": {
                     "type": "string"
                 },
                 "name": {
@@ -1389,21 +1621,6 @@
                     "type": "string"
                 },
                 "telegram": {
-                    "type": "string"
-                }
-            }
-        },
-        "chat.User": {
-            "type": "object",
-            "required": [
-                "email",
-                "password"
-            ],
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "password": {
                     "type": "string"
                 }
             }
@@ -1415,6 +1632,35 @@
             ],
             "properties": {
                 "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "chat.UserHobbyInput": {
+            "type": "object",
+            "required": [
+                "description"
+            ],
+            "properties": {
+                "description": {
+                    "type": "string"
+                }
+            }
+        },
+        "chat.UserInput": {
+            "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
                     "type": "string"
                 }
             }
