# pkg/handler/list.go
@@ -8,6 +8,86 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// @Summary Find Users for chat
+// @Security ApiKeyAuth
+// @Tags find
+// @Description find users for chat
+// @ID find-user-by-time
+// @Accept  json
+// @Produce  json
+// @Param input body chat.FindUserInput true "list info"
+// @Success 200 {integer} integer 1
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /api/chats/find_chats_users [post]
+func (h *Handler) findUsersByTime(c *gin.Context) {
+	userId, err := getUserId(c)
+	if err != nil {
+		NewErrorResponse(c, http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	var input chat.FindUserInput
+	if err := c.BindJSON(&input); err != nil {
+		NewErrorResponse(c, http.StatusBadRequest, err.Error())
+		return
+	}
+
+	list_id, err := h.services.ChatList.FindByTime(userId, input)
+	if err != nil {
+		NewErrorResponse(c, http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	c.JSON(http.StatusOK, map[string]interface{}{
+		"finded_user_id_for_chat": list_id,
+	})
+}
+
+// @Summary Find Users by hobby for chat
+// @Security ApiKeyAuth
+// @Tags find
+// @Description find users by hobby for chat
+// @ID find-user-by-hobby
+// @Accept  json
+// @Produce  json
+// @Param input body chat.FindUserInput true "list info"
+// @Success 200 {integer} getAllListsResponse
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /api/chats/find_chats_users_by_hobby [post]
+func (h *Handler) findUsersByHobby(c *gin.Context) {
+	userId, err := getUserId(c)
+	if err != nil {
+		NewErrorResponse(c, http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	var input chat.FindUserInput
+	if err := c.BindJSON(&input); err != nil {
+		NewErrorResponse(c, http.StatusBadRequest, err.Error())
+		return
+	}
+
+	list_id, err := h.services.ChatList.FindByTime(userId, input)
+	if err != nil {
+		NewErrorResponse(c, http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	lists, err := h.services.ChatList.FindByHobby(userId, list_id)
+	if err != nil {
+		NewErrorResponse(c, http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	c.JSON(http.StatusOK, getAllHobbyResponse{
+		Data: lists,
+	})
+}
+
 // @Summary Create chat
 // @Security ApiKeyAuth
 // @Tags chats
@@ -22,19 +102,13 @@ import (
 // @Failure default {object} errorResponse
 // @Router /api/chats/create_chat [post]
 func (h *Handler) createList(c *gin.Context) {
-	userId, err := getUserId(c)
-	if err != nil {
-		NewErrorResponse(c, http.StatusInternalServerError, err.Error())
-		return
-	}
-
-	var input chat.ChatList
+	var input chat.RequestCreateList
 	if err := c.BindJSON(&input); err != nil {
 		NewErrorResponse(c, http.StatusBadRequest, err.Error())
 		return
 	}
 
-	chat_id, err := h.services.ChatList.Create(userId, input)
+	chat_id, err := h.services.ChatList.CreateList(input)
 	if err != nil {
 		NewErrorResponse(c, http.StatusInternalServerError, err.Error())
 		return
@@ -68,7 +142,7 @@ func (h *Handler) getAllLists(c *gin.Context) {
 		return
 	}
 
-	lists, err := h.services.ChatList.GetAll(userId)
+	lists, err := h.services.ChatList.GetAllLists(userId)
 	if err != nil {
 		NewErrorResponse(c, http.StatusInternalServerError, err.Error())
 		return
@@ -105,7 +179,7 @@ func (h *Handler) getListById(c *gin.Context) {
 		return
 	}
 
-	list, err := h.services.ChatList.GetById(userId, chat_id)
+	list, err := h.services.ChatList.GetListById(userId, chat_id)
 	if err != nil {
 		NewErrorResponse(c, http.StatusInternalServerError, err.Error())
 		return
@@ -113,7 +187,6 @@ func (h *Handler) getListById(c *gin.Context) {
 
 	c.JSON(http.StatusOK, list)
 }
-
 
 // @Summary Update Chat
 // @Security ApiKeyAuth
@@ -148,7 +221,7 @@ func (h *Handler) updateList(c *gin.Context) {
 		return
 	}
 
-	if err := h.services.ChatList.Update(userId, chat_id, input); err != nil {
+	if err := h.services.ChatList.UpdateList(userId, chat_id, input); err != nil {
 		NewErrorResponse(c, http.StatusInternalServerError, err.Error())
 		return
 	}
@@ -182,7 +255,7 @@ func (h *Handler) deleteList(c *gin.Context) {
 		return
 	}
 
-	err = h.services.ChatList.Delete(userId, chat_id)
+	err = h.services.ChatList.DeleteList(userId, chat_id)
 	if err != nil {
 		NewErrorResponse(c, http.StatusInternalServerError, err.Error())
 		return
